[package]
name = "R413D08"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/acpiccolo/R413D08-Controller"
description = "R413D08 protocol and commandline tool"

[lib]
name = "r413d08_lib"
path = "src/lib.rs"

[[bin]]
name = "relay"
path = "src/main.rs"
required-features = ["bin-dependencies"]

[features]
default = ["bin-dependencies"]
bin-dependencies = [
    "safe-client-sync",
    "tokio-rtu-sync",
    "tokio-tcp-sync",
    "dep:anyhow",
    "dep:log",
    "dep:tokio-serial",
    "clap/derive",
    "dep:clap-verbosity-flag",
    "dep:clap-num",
    "dep:flexi_logger",
    "dep:dialoguer",
    "dep:humantime",
]
tokio-rtu-sync = ["tokio-modbus/rtu-sync", "dep:tokio-serial"]
tokio-rtu = ["tokio-modbus/rtu", "dep:tokio-serial"]
tokio-tcp-sync = ["tokio/net", "tokio-modbus/tcp-sync", "dep:tokio-serial"]
tokio-tcp = ["tokio/net", "tokio-modbus/tcp", "dep:tokio-serial"]
safe-client-sync = ["tokio/sync"]
safe-client-async = ["tokio/sync"]
serde = ["serde/derive"]

[dependencies]
thiserror = "2"
tokio-modbus = { version = "0.16", default-features = false, optional = true }
tokio-serial = { version = "5", optional = true }
tokio = { version = "1", default-features = false, optional = true }
serde = { version = "1", optional = true }
# Requirements for bin
anyhow = { version = "1", optional = true }
log = { version = "0.4", optional = true }
clap = { version = "4", optional = true }
clap-verbosity-flag = { version = "3", optional = true }
clap-num = { version = "1", optional = true }
flexi_logger = { version = "0.31", optional = true }
dialoguer = { version = "0.12", optional = true }
humantime = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
assert_matches = "1"

[package.metadata.cargo-machete]
ignored = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
